--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <body>
         <div class="container">
         <h1>Website</h1>
-        <button id="aboutus" onclick="aboutus">ABOUT US</button>
-        <button id="contactus" onclick="contactus">CONTACT US</button>
-        <button id="signup" onclick="signup">SIGN UP</button>
-        <button id="login" onclick="login">LOGIN</button>
-        <button id="imagegallery" onclick="imagegallery">IMAGES</button>
-        <button id="videogallary" onclick="videogallary">VIDEOS</button>
+        <button id="aboutus" onclick="aboutus()">ABOUT US</button>
+        <button id="contactus" onclick="contactus()">CONTACT US</button>
+        <button id="signup" onclick="signup()">SIGN UP</button>
+        <button id="login" onclick="login()">LOGIN</button>
+        <button id="imagegallery" onclick="imagegallery()">IMAGES</button>
+        <button id="videogallary" onclick="videogallary()">VIDEOS</button>
         </div>
         <script src="index.js"></script>
     </body>
