--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
         <button id="videogallary" onclick="videogallary()">VIDEOS</button>
         </div>
         <script src="index.js"></script>
+        <script>
+            function aboutus() {
+                window.location.href = "aboutus.html";
+              }
+              function contactus() {
+                window.location.href = "Contactus.html";
+              }
+              function signup() {
+                window.location.href = "signup.html";
+              }
+        </script>
     </body>
 </html>
