--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
               function signup() {
                 window.location.href = "signup.html";
               }
+              function login() {
+                window.location.href = "login.html";
+              }
         </script> 
     </body>
 </html>
