--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <button id="signup" onclick="signup()">SIGN UP</button>
         <button id="login" onclick="login()">LOGIN</button>
         <button id="imagegallery" onclick="imagegallery()">IMAGES</button>
-        <button id="videogallary" onclick="videogallary()">VIDEOS</button>
+        <button id="video" onclick="video()">VIDEOS</button>
         </div>
         <script src="index.js"></script>
         <script>
@@ -25,6 +25,9 @@
               }
               function login() {
                 window.location.href = "login.html";
+              }
+              function video() {
+                window.location.href = "video.html";
               }
         </script> 
     </body>
