--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <button id="contactus" onclick="contactus()">CONTACT US</button>
         <button id="signup" onclick="signup()">SIGN UP</button>
         <button id="login" onclick="login()">LOGIN</button>
-        <button id="imagegallery" onclick="imagegallery()">IMAGES</button>
+        <button id="image" onclick="image()">IMAGES</button>
         <button id="video" onclick="video()">VIDEOS</button>
         </div>
         <script src="index.js"></script>
@@ -28,6 +28,9 @@
               }
               function video() {
                 window.location.href = "video.html";
+              }
+              function image() {
+                window.location.href = "image.html";
               }
         </script> 
     </body>
