--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="container">
-        <h1>Website</h1>
+        <h1>Welcome To HomePage</h1>
         <button id="aboutus" onclick="aboutus()">ABOUT US</button>
         <button id="contactus" onclick="contactus()">CONTACT US</button>
         <button id="signup" onclick="signup()">SIGN UP</button>
